--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
            <fieldset>
                 <legend>Login</legend>
                 <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" placeholder="Enter your email"> <br><br>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required> <br><br>
                 <label for="password">Password:</label><br>
-                <input type="password" id="password" name="password" placeholder="Enter your password">
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 <br><br>
                 <input type="submit" value="Login">
 
