--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Last Project</title>
+    <title> hello its Last Project</title>
 </head>
 <body>
       <form>
